margin bug causing spacing issues

--- a/style.less
+++ b/style.less
@@ -9,7 +9,6 @@
 	background-color:#FFF; // to allow opacity to shine through
 
 	.box-sizing(border-box);
-	margin: 4px;
 
 	}
 }
